--- a/app/build.gradle
+++ b/app/build.gradle
@@ -37,4 +37,12 @@ dependencies {
     testImplementation libs.junit
     androidTestImplementation libs.ext.junit
     androidTestImplementation libs.espresso.core
+
+    // Room components
+    implementation(libs.room.runtime)
+    annotationProcessor(libs.room.compiler)
+    androidTestImplementation(libs.room.testing)
+
+    implementation libs.lombok
+    annotationProcessor libs.lombok
 }
