--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,8 +13,23 @@
         android:theme="@style/Theme.D308VacationPlanner"
         tools:targetApi="31">
         <activity
-            android:name=".MainActivity"
-            android:exported="true">
+            android:name=".UI.ExcursionDetails"
+            android:parentActivityName=".UI.VacationDetails"
+            android:exported="false" />
+        <activity
+            android:name=".UI.VacationDetails"
+            android:exported="false"
+            android:label="Vacation Details and Excursions List"
+            android:parentActivityName=".UI.VacationList" />
+        <activity
+            android:name=".UI.VacationList"
+            android:exported="false"
+            android:label="Vacation List"
+            android:parentActivityName=".UI.MainActivity" />
+        <activity
+            android:name=".UI.MainActivity"
+            android:exported="true"
+            android:label="Main activity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
