UI fix: added text for associated excursions header

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -21,6 +21,7 @@
         <activity
             android:name=".UI.ExcursionDetails"
             android:exported="false"
+            android:label="Excursion Details"
             android:parentActivityName=".UI.VacationDetails" />
         <activity
             android:name=".UI.VacationDetails"
